# codechain-cuckoo-miner

./: .travis.yml  Cargo.toml  README.md
src/: cli.yml  config.rs  main.rs  worker.rs
