[package]
name = "codechain-cuckoo-miner"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["CodeChain Team <codechain@kodebox.io>"]

[dependencies]
byteorder = "1.2"
clap = { version = "2", features = ["yaml"] }
codechain-miner = { git = "https://github.com/CodeChain-io/codechain-miner.git", rev = "820e11e" }
cuckoo = { git = "https://github.com/CodeChain-io/rust-cuckoo.git", rev = "280cab9c" }
ethereum-types = "0.3.2"
env_logger = "0.5.10"
log = "0.4.3"
rlp = "0.2.2"
rust-crypto = "0.2.36"
rustc-hex = "1.0"
